# pdf-parser

./: LICENSE  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml
data/: .gitignore
docs/: architecture.ipynb  parser.md
docs/schemas/: file_metadata.json  formatted_data.json  inference_data.json  layout_parsed.json  layout_schema.json  tables_jsonl.json
notebooks/: data_load.ipynb  docling_extraction.ipynb  documentai_extraction.ipynb  evaluation_wer.ipynb  layoutlmv3.ipynb  pdfplumber_table_extraction.ipynb  simple_text_extractor.ipynb  tabula_extraction.ipynb  xbrl_tabula_comparison.ipynb
src/pdf_parser/: __init__.py  _docling.py  _structures.py  download_stage.py  export_stage.py  layout.py  markdown_exporter.py  parser.py
tests/: test_parser.py
