[project]
name = "pdf-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "camelot-py[cv]>=1.0.9",
    "datasets>=4.1.1",
    "diagrams>=0.24.4",
    "docling>=2.54.0",
    "google-cloud-documentai>=3.6.0",
    "ipdb>=0.13.13",
    "ipykernel>=6.30.1",
    "jpype1>=1.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "sec-api>=1.0.32",
    "sec-edgar-downloader>=5.0.3",
    "tabula-py>=2.10.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
